--- a/coursework/frontend/src/app/components/camp/camp.component.html
+++ b/coursework/frontend/src/app/components/camp/camp.component.html
@@ -41,7 +41,7 @@
         <div class="row row-cols-2 row-cols-md-3 g-4">
           <ng-container *ngFor="let table of pageState.tables">
             <div class="col-4">
-              <app-equipment-card [table]="table"></app-equipment-card>
+              <app-expedition-card [table]="table"></app-expedition-card>
             </div>
           </ng-container>
         </div>
